--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,7 +3,7 @@
         body{
             margin: 0;
             padding: 0;
-            background-color: rgb(255, 255, 255);
+            background-color: snow;
             font-family: "League Spartan";  
         }
 
@@ -37,7 +37,7 @@
             justify-content: end;
             justify-items: center;
             width: 50%;
-            background-color: rgb(255, 255, 255);
+            background-color: snow;
             height: 600px;
             margin-top: 50px;
         }
@@ -47,7 +47,7 @@
             flex-direction: column;
             justify-content: center;
             width: 50%;
-            background-color: rgb(255, 255, 255);
+            background-color: snow;
             max-height: 600px;
             width: 50%;
             padding-bottom: 70px;
